[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-bridge"
version = "0.1.0"
description = "Puente seguro para comunicación entre servicios Python y Node.js"
readme = "README.md"
authors = [{name = "Tu Nombre", email = "tu@email.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
